# dix_vision_v42.2

./: .bandit_disabled  .dockerignore  .env  .env.dockerless  .env.example  .flake8_disabled  .gitignore  .pre-commit-config-turbo.yaml  .pylintrc_disabled  ADVANCED_ATTENTION_SYSTEM_ARCHITECTURE.md  ADVANCED_COORDINATION_PROTOCOLS_ARCHITECTURE.md  AGENT_OPERATIONS_CENTER_COMPLETION.md  AGENT_OPERATIONS_CENTER_DESIGN.md  AI_PROVIDERS_IMPLEMENTATION_COMPLETE.md  ALL_COGNITIVE_FEATURES_ENABLED.md  ALL_FEATURES_COMPLETE_REPORT.md  ALL_OPTIONS_COMPLETE.md  ALL_PHASES_COMPLETE.md  ALL_REMAINING_COMPONENTS_IMPLEMENTED_COMPLETE.md  API_KEYS_SETUP_GUIDE.md  ARCHITECTURE_BLUEPRINT.md  ARCHITECTURE_RESTORATION_COMPLETE.md  AUDIT_AND_ROADMAP.md  AUTHORITY_CORRECTION_OPERATOR_ULTIMATE_AUTHORITY.md  AUTO_BUILD_CONFIGURED.md  AUTO_GITHUB_PR_README.md  BATCH_PATH_ERROR_FIX.md  BOOT_TEST_EXECUTIVE_SUMMARY.md  BOOT_TEST_RESULTS.md  BUILD_PLAN_STATUS.md  CI_CD_OPTIMIZATION_PLAN.md  COCKPIT_WIDGETS_MIGRATION_GUIDE.md  COGNITIVE_ARCHITECTURE_ENHANCEMENT_GUIDE.md  COGNITIVE_AUDIT_CORRECTION.md  COGNITIVE_CONSOLIDATION_ROADMAP.md  COGNITIVE_CONSOLIDATION_SUMMARY.md  COGNITIVE_CONTROL_CENTER_FIXED.md  COGNITIVE_CONTROL_CENTER_MIGRATION_PLAN.md  COGNITIVE_FEATURE_CATALOG.md  COGNITIVE_INTEGRATION_QUICKSTART.md  (+423 more)
.devin/: auto_push_state.json  config.json  config.local.json
.devin_disabled/: auto_pr_state.json  config.json
.kilo/: DIX MEME.lnk  agent-manager.json.16712.1780600433246.tmp  analysis_tracking.tsv
.local-tools/: protoc-notes.txt
.vscode_backup_20260622_222448/: launch.json  settings_minimal.json
.vscode_disabled/: launch.json  tasks.json.backup
alternatives/: README.md
archive/: ANALYSIS_COMPARISON_REPORT.md  COMPLETE_SYSTEM_INTEGRATION_REPORT.md  DESKTOP_LAUNCHER_FIXED_REPORT.md  DIX VISION v42.2 - CANONICAL SYSTEM MANIFEST.txt  FINAL_COMPLETION_REPORT_2026_06_13.md  PHASE1_FOUNDATION_COMPLETE_2026_06_13.md  PHASE1_RUNTIME_VALIDATION_REPORT_2026_06_13.md  PHASE7_COMPLETE_100_CONTAINERS_2026_06_13.md  PHASE8_NOTIFICATIONS_COMPLETE_2026_06_13.md  error_traceback.txt
assistent_temp/ASSISTENT/interactive_assistent-main/src-tauri/crates/cloud/: Cargo.toml
assistent_temp/ASSISTENT/interactive_assistent-main/src-tauri/crates/llm/: Cargo.toml
assistent_temp/ASSISTENT/interactive_assistent-main/src-tauri/crates/llm/src/: lib.rs
assistent_temp/ASSISTENT/interactive_assistent-main/src-tauri/crates/voice/: Cargo.toml
assistent_temp/ASSISTENT/interactive_assistent-main/src-tauri/crates/voice/src/: lib.rs
assistent_temp/ASSISTENT/interactive_assistent-main/src-tauri/crates/voice/src/openrouter/: tts.rs  wav.rs
checkpoints/: integrated_1781656548298.json  integrated_1781656627871.json  integrated_1781656627872.json  integrated_1781656627873.json  test_1781656548273.json  test_1781656619422.json  test_component_1781656979252.json  test_component_1781657011564.json  test_component_1781657011566.json  test_component_1781657042084.json
cockpit/: DEPRECATED.md  app.py  chat.py
cognitive_governance/: cognitive_physics.py
cognitive_os/: __init__.py
config/: cognitive_architecture_config.yaml  cognitive_config.yaml  cognitive_config_loader.py
containers_disabled/: README.md
contracts/: execution.proto  ownership_registry.yaml
coordination_layer/: __init__.py  cognitive_economy.py  concrete.py  learning_gate.py  operating_modes.py
core/: bootstrap_kernel.py  mcos_kernel.py  secrets.py  types.py
custom_skills/: analyze_wallet.py  research_coin.py
dash_meme/: package-lock.json  package.json  vite.config.ts
dashboard2026/: .env.development  DASHBOARD_INTEGRATION_TESTING_SUCCESS_2026_06_13.md  DASHBOARD_INTEGRATION_VERIFICATION_COMPLETE_2026_06_13.md  DASHMEME_CANONICAL_MANIFEST.md  DIRECT_INTEGRATION_USAGE.md  FINAL_SYNTAX_FIXES.md  INTEGRATION_TEST_REPORT.md  LIVE_TEST_REPORT.md  PHASE10_IMPLEMENTATION_SUMMARY.md  PHASE13_IMPLEMENTATION_SUMMARY.md  PHASE16_IMPLEMENTATION_SUMMARY.md  (+15 more)
dix_desktop/src-tauri/: Cargo.toml  tauri.conf.json
dix_desktop/src-tauri/.cargo/: config.toml
dix_desktop/src-tauri/binaries/piper/: .keep
dix_desktop/src-tauri/capabilities/: default.json
dix_desktop/src-tauri/crates/cloud/src/: lib.rs
dix_desktop/src-tauri/crates/desktop/src/: capture.rs  input.rs  procs.rs  vdesktop.rs
dix_desktop/src-tauri/crates/imagegen/: Cargo.toml
dix_desktop/src-tauri/crates/imagegen/src/: openrouter.rs
dix_desktop/src-tauri/crates/intent/src/: anchors.rs
dix_desktop/src-tauri/crates/router/: Cargo.toml
dix_desktop/src-tauri/crates/router/src/: chat.rs
dix_desktop/src-tauri/crates/skills/src/: registry.rs  volume.rs
dix_desktop/src-tauri/crates/storage/src/: download.rs  feedback.rs
dix_desktop/src-tauri/crates/storage/src/rag/: mod.rs  schema.rs
dix_desktop/src-tauri/crates/voice/src/: deepgram.rs  faster_whisper.rs  tts.rs
dix_desktop/src-tauri/crates/voice/src/openrouter/: mod.rs  stt.rs
dix_desktop/src-tauri/crates/weather/src/: extract.rs  geocode.rs  lib.rs  openmeteo.rs  openweathermap.rs
dix_desktop/src-tauri/icons/: icon.icns
dix_desktop/src-tauri/src/: desktop_cmds.rs  feedback.rs  imagegen.rs  intent.rs  lib.rs  local_classifier.rs  models.rs  proactive.rs  shortcuts.rs  startup.rs  sysctx.rs  tray.rs
dix_desktop/src-tauri/src/chat/: speak.rs  tool_loop.rs  vision.rs
dix_desktop/src-tauri/src/commands/: agent.rs  chat.rs  mod.rs  routing.rs  training.rs  vision.rs  weather.rs
dix_desktop/src-tauri/src/relationship/: intro.rs  mod.rs  prompts.rs
dix_desktop/src-tauri/src/settings/: agent.rs  avatar.rs  game_coach.rs  imagegen.rs  routing.rs  store.rs  telemetry.rs  user.rs  weather.rs
komorebi_desktop/src-tauri/crates/desktop/: Cargo.toml
komorebi_desktop/src-tauri/crates/desktop/src/: lib.rs
komorebi_desktop/src-tauri/crates/intent/: Cargo.toml
komorebi_desktop/src-tauri/crates/skills/: Cargo.toml
komorebi_desktop/src-tauri/crates/skills/src/: clipboard.rs  open.rs  screenshot.rs
komorebi_desktop/src-tauri/crates/storage/: Cargo.toml
komorebi_desktop/src-tauri/crates/storage/src/rag/: index.rs
(+4880 files in other folders)
