[workspace]
resolver = "2"
members = [
    ".",
    "crates/llm",
    "crates/cloud",
    "crates/router",
    "crates/voice",
    "crates/skills",
    "crates/storage",
    "crates/desktop",
    "crates/imagegen",
    "crates/weather",
    "crates/intent",
]

[workspace.package]
version = "2.0.10"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Komorebi contributors"]

[workspace.dependencies]
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures = "0.3"

[package]
name = "komorebi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Komorebi — anime-avatar virtual assistant"

[lib]
name = "komorebi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
sys-locale = "0.3"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true
async-stream = "0.3"
reqwest.workspace = true
base64 = "0.22"
sysinfo = "0.38"
chrono = "0.4"
once_cell = "1"
parking_lot = "0.12"
iana-time-zone = "0.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
sha2 = "0.10"

# Internal crates (stub for now, wired in next phases).
komorebi-llm = { path = "crates/llm" }
komorebi-cloud = { path = "crates/cloud" }
komorebi-router = { path = "crates/router" }
komorebi-voice = { path = "crates/voice" }
komorebi-skills = { path = "crates/skills" }
komorebi-storage = { path = "crates/storage" }
komorebi-desktop = { path = "crates/desktop" }
komorebi-imagegen = { path = "crates/imagegen" }
komorebi-weather = { path = "crates/weather" }
komorebi-intent = { path = "crates/intent" }

[features]
default = []
local-llm = ["komorebi-llm/local-llm"]
stt = ["komorebi-voice/stt"]
# Convenience umbrella: everything that ships in the full release binary.
full = ["local-llm", "stt"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

# Faster local release iterations — skips full LTO and keeps multiple
# codegen units so incremental rebuilds are ~3-4× quicker. Use with
# `pnpm tauri build -- --profile release-fast --features full`.
[profile.release-fast]
inherits = "release"
codegen-units = 16
lto = "thin"
opt-level = 2
strip = false

# Dev builds: speed up dependency compilation (they dominate first-run
# cost) while keeping our own crates unoptimized for fast incremental
# rebuilds.
[profile.dev.package."*"]
opt-level = 1
