[package]
name = "komorebi-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
sysinfo = "0.39"
enigo = "0.6"
xcap = "0.9"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi"] }
