[package]
name = "komorebi-intent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
parking_lot = "0.12"
once_cell = "1"

# fastembed wraps ort + tokenizers and auto-downloads a quantized
# multilingual MiniLM model on first use (~25 MB). Pure-Rust inference,
# CPU only, no Python or external runtime required.
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries", "hf-hub-rustls-tls"] }
