[package]
name = "komorebi-skills"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
arboard = "3.4"
opener = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
