[package]
name = "komorebi-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest.workspace = true
futures.workspace = true
sha2 = "0.11"
rusqlite = { version = "0.39", features = ["bundled"] }
walkdir = "2.5"
pdf-extract = "0.10"
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"
