[package]
name = "komorebi-cloud"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
futures.workspace = true
async-trait.workspace = true
async-stream = "0.3"
bytes = "1"
base64 = "0.22"
komorebi-router = { path = "../router" }

[dev-dependencies]
tokio = { version = "1.52", features = ["macros", "rt"] }
